--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+<!-- Java version compatibility: Use versions above 9 and below 22.
+     If Java 22 is used, additional configuration may be needed. -->
+    
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
