re-structured project and added step 4 instruction revisions

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath> <!-- Points to the parent POM -->
     </parent>
 
-    <artifactId>reva-recipe-backend</artifactId>
+    <artifactId>reva-recipe-frontend</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging> <!-- or 'war' if it's a web module -->
 
