Added everything except for the src folder

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "projectType": "javascript",
-    "chromedriverPath": "-d driver",
-    "vscodeExtensions": []
+  "projectType": "javascript",
+  "browser": "chrome",
+  "headless": true,
+  "vscodeExtensions": []
 }
